#1181 Reject a null column name and a null child when the predicate is built
The factories reject a null literal where the predicate is built, but a
null column name went through and failed at reader creation with a
NullPointerException from inside the schema path lookup, and not(null)
did the same from the resolver. and / or with a null child failed in
List.of with no message. Each now fails at the call, naming the
argument, as a null literal does.